Changed how inventory holder viewers are handled. Removed unnecessary listener. Minor refactoring. Other minor fixes.